--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,55 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Profile</title>
+	<link href="styles.css" rel="stylesheet">
+</head>
+<body>
+	<nav>
+		<ol>
+	        <li class="crumb"><a href="./home.html">Home</a></li>
+	        <li class="crumb"><a href="./profile.html">Profile</a></li>
+	        <li class="crumb"><a href="./about.html">About</a></li>
+	    </ol>
+	</nav>
 
-<br>
-<br>
+	<content>
+		<h1>Profile</h1>    
+        <div class="row">
+            <div class="column">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Proficient in Python and Java</li>
+                    <li>Good at problem solving and critical thinking</li>
+                    <li>Wide knowledge in many different fields</li>
+                </ul>
+            </div>
+            <div class="column">
+                <h3>Interests</h3>
+                <ul>
+                    <li>Traveling</li>
+                    <li>Gaming</li>
+                    <li>Solving Rubik's cubes</li>
+                </ul>
+            </div>
+        </div>
+        <h3>Career Goals</h3>
+		<p>
+            My career goal is to become an expert in web or game development. 
+            I want to become an expert in front-end and back-end web development 
+            so I can make dynamic websites. On the other hand, I want to work in 
+            game creation and explore programming and game design to create 
+            engaging gaming experiences. In the end, I want to be a part of 
+            creative projects that push the limits of digital storytelling 
+            and innovation.
+		</p>
+        <button class="button" button id="color">My Favorite Color</button>
+        <button class="button" button id="place">My Favorite Place</button>
+        <button class="button" button id="ritual">My Favorite Ritual</button>
 
-<a href="./home.html"><< Back </a>
+	</content>
+
+    <script src="profile.js"></script>
+
+</body>
+</html>
